unit tests & docs